Table Scrollbar added with fixed header:)

--- a/dashboard/css/master.css
+++ b/dashboard/css/master.css
@@ -5,3 +5,13 @@
 
 tr:hover {background-color:#f5f5f5;}
 
+tbody{
+  display:block;
+  overflow:auto;
+  height:300px;
+  width:100%;
+}
+thead tr{
+  display:block;
+}
+
